--- a/BlazorVoice.csproj
+++ b/BlazorVoice.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka" Version="1.5.42" />
+    <PackageReference Include="Akka.Streams" Version="1.5.42" />
     <PackageReference Include="MudBlazor" Version="8.7.0" />
   </ItemGroup>
 
