--- a/BlazorVoice.csproj
+++ b/BlazorVoice.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.5.42" />
     <PackageReference Include="Akka.Streams" Version="1.5.42" />
+    
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.16" />
     <PackageReference Include="MudBlazor" Version="8.7.0" />
   </ItemGroup>
 
