--- a/BlazorVoice.csproj
+++ b/BlazorVoice.csproj
@@ -12,6 +12,7 @@
     
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.16" />
     <PackageReference Include="MudBlazor" Version="8.7.0" />
+    <PackageReference Include="OpenAI" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
