--- a/BlazorVoice.csproj
+++ b/BlazorVoice.csproj
@@ -6,14 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Akka" Version="1.5.42" />
-    <PackageReference Include="Akka.Streams" Version="1.5.42" />
-    
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.16" />
-    <PackageReference Include="MudBlazor" Version="8.7.0" />
-    <PackageReference Include="NAudio" Version="2.2.1" />
-    <PackageReference Include="OpenAI" Version="2.1.0" />
+  <ItemGroup>    
+	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.16" />
+	<PackageReference Include="MudBlazor" Version="8.7.0" />
+	<PackageReference Include="NAudio" Version="2.2.1" />
+	<PackageReference Include="OpenAI" Version="2.1.0" />
+	<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.14" />
+	<PackageReference Include="Akka" Version="1.5.42" />
+	<PackageReference Include="Akka.Remote" Version="1.5.42" />
+	<PackageReference Include="Akka.Streams" Version="1.5.42" />
+	<PackageReference Include="Akka.Logger.NLog" Version="1.5.13" />	  
   </ItemGroup>
 
 </Project>
