--- a/BlazorVoice.csproj
+++ b/BlazorVoice.csproj
@@ -7,15 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>    
-	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.16" />
-	<PackageReference Include="MudBlazor" Version="8.7.0" />
-	<PackageReference Include="NAudio" Version="2.2.1" />
+	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.16" />    	
+	<PackageReference Include="MudBlazor" Version="8.7.0" />	
 	<PackageReference Include="OpenAI" Version="2.1.0" />
 	<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.14" />
 	<PackageReference Include="Akka" Version="1.5.42" />
 	<PackageReference Include="Akka.Remote" Version="1.5.42" />
 	<PackageReference Include="Akka.Streams" Version="1.5.42" />
-	<PackageReference Include="Akka.Logger.NLog" Version="1.5.13" />	  
+	<PackageReference Include="Akka.Logger.NLog" Version="1.5.13" />
+	<PackageReference Include="Xabe.FFmpeg" Version="6.0.1" />	  
   </ItemGroup>
 
   <ItemGroup>
